# curso-factory

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  cli.py  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: codeql.yml  test.yml
config/: courses.yaml  providers.yaml  quality_rules.yaml
config/clients/_template/: client.yaml  tutor.yaml.example
config/clients/acme/: client.yaml
config/clients/default/: client.yaml
config/clients/herreira/: client.yaml
docs/: ARCHITECTURE.md  FINOPS.md  MULTI-CLIENT.md
docs/knowledge/geo-aeo/: 00-principios-mestres.md  01-anti-patterns.md  02-glossario.md  10-manual-parte-1-auditoria.md  11-manual-parte-2-descoberta.md  12-manual-parte-3-reescrita.md  13-manual-parte-4-agentic.md  20-papers-bloco-1-geo-aeo.md  21-papers-bloco-2-rag-kg.md  22-papers-bloco-3-agentic.md  30-checklist-auditoria-geo16.md  31-checklist-reescrita.md  32-checklist-publicacao-multi.md  33-checklist-agent-legibility.md  40-thresholds-quantitativos.md  50-fontes-e-links.md  README.md
examples/: certify_cli.py  tutor_api.py
output/drafts/: escrita-academica-profunda-geo_modulos-1-6-expanded.md
scripts/: build_herreira_piloto.py  test_e2e_dentistas.py
scripts/legacy/: README.md  clean_markdown_for_tsx.py  convert_drafts_to_tsx.py  generate_joias_course.py  generate_joias_course_v2.py
src/: cache.py  config.py  cost_tracker.py  llm_client.py  models.py  orchestrator.py  providers.py  unified_finops.py
src/agentic/: __init__.py  a2a_schema.py  llms_txt.py  mcp_schema.py  schema_org.py
src/agents/: analyzer.py  base.py  classifier.py  lang_resolver.py  pipeline.py  researcher.py  reviewer.py  translator.py  tutor.py  tutor_memory.py  writer.py
src/certification/: __init__.py  certificate.py  qrcode_helper.py  skill_graph.py
src/clients/: __init__.py  context.py  loader.py
src/converters/: __init__.py  draft_to_course.py
src/engagement/: __init__.py  badges.py  quiz.py  srs.py  streak.py
src/generators/: __init__.py  build_validator.py  metadata_sync.py  schema_builder.py  tsx_generator.py
src/i18n/: __init__.py  constants.py
src/indexer/: __init__.py  course_indexer.py
src/parsers/: __init__.py  markdown_parser.py
src/schemas/: course.schema.json
src/templates/: certificate.html.j2  layout.tsx.j2  page.tsx.j2
src/templates/prompts/: analyze.md  classify.md  draft.md  research.md  review.md  translate.md  tutor.md
src/templates/prompts/en/: analyze.md  classify.md  draft.md  research.md  review.md  translate.md
src/templates/prompts/es/: analyze.md  classify.md  draft.md  research.md  review.md  translate.md
src/templates/prompts/pt-br/: analyze.md  classify.md
src/validators/: accent_checker.py  content_checker.py  html_validator.py  link_checker.py  quality_gate.py  test_voice_guard.py  voice_guard.py
tests/: test_agentic.py  test_certification.py  test_cli.py  test_clients.py  test_converters.py  test_cost_cache.py  test_engagement.py  test_generators.py  test_i18n.py  test_parsers.py  test_tutor.py  test_validators_smoke.py
tests/fixtures/: sample_course.json
