[project]
name = "curso-factory"
version = "1.0.0"
description = "Fábrica de cursos educacionais com 5 LLMs orquestrados"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Alexandre Caramaschi", email = "alexandre.brt14@gmail.com"}
]

[project.scripts]
curso-factory = "cli:main"

[project.urls]
Homepage = "https://alexandrecaramaschi.com/educacao"
Repository = "https://github.com/alexandrebrt14-sys/curso-factory"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["src*"]
