[project]
name = "curso-factory"
version = "2.0.0"
description = "Fábrica de cursos educacionais com 5 LLMs orquestrados — pipeline AAA com Jinja2 templates"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Alexandre Caramaschi", email = "alexandre.brt14@gmail.com"}
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "click>=8.1",
    "jsonschema>=4.21",
    "rich>=13.7",
]

[project.scripts]
curso-factory = "cli:main"

[project.urls]
Homepage = "https://github.com/alexandrebrt14-sys/curso-factory"
Repository = "https://github.com/alexandrebrt14-sys/curso-factory"
Documentation = "https://github.com/alexandrebrt14-sys/curso-factory/tree/main/docs"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["scripts", "output", "config", "docs", ".venv", "build", "dist"]
