[project]
name = "curso-factory"
version = "2.0.0"
description = "Fábrica de cursos educacionais com 5 LLMs orquestrados — pipeline AAA com Jinja2 templates"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Alexandre Caramaschi", email = "alexandre.brt14@gmail.com"}
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "click>=8.1",
    "jsonschema>=4.21",
    "rich>=13.7",
]

[project.optional-dependencies]
# Wave 9 — geração de QR code em certificados HTML
certification = ["qrcode[pil]>=7.4"]
# Wave 7 — endpoint de exemplo do Tutor IA (examples/tutor_api.py)
tutor-api = ["fastapi>=0.110", "uvicorn>=0.27"]
# Atalho para todas as features opcionais
all = ["qrcode[pil]>=7.4", "fastapi>=0.110", "uvicorn>=0.27"]
# Dev dependencies (testes, coverage)
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0"]

[project.scripts]
curso-factory = "cli:main"

[project.urls]
Homepage = "https://github.com/alexandrebrt14-sys/curso-factory"
Repository = "https://github.com/alexandrebrt14-sys/curso-factory"
Documentation = "https://github.com/alexandrebrt14-sys/curso-factory/wiki"
Changelog = "https://github.com/alexandrebrt14-sys/curso-factory/blob/main/CHANGELOG.md"
Issues = "https://github.com/alexandrebrt14-sys/curso-factory/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
